syntax = "proto3";

package proto;

option go_package = "/diamond_wallet";

import "google/api/annotations.proto";

message DiamondWalletDetail{
  string status = 1;
  DiamondWallet data = 2;
}

message DiamondWallet{
  int64 id = 1;
  int64 user_id = 2;
  string account_number = 3;
  uint64 balance_diamond = 4;
}

message UserID{
  int64 user_id = 1;
}

message UpdateDiamondReq{
  int64 user_id = 1;
  uint64 balance_diamond = 2;
}

message StatusOK{
  string message = 1;
}

service DiamondWalletService{
  rpc DetailWalletByUserID(UserID) returns (DiamondWalletDetail){
    option (google.api.http) = {
      get: "/api/grpc/wallets/{user_id}"
    };
  }

  rpc UpdateDiamondWallet(UpdateDiamondReq) returns (StatusOK){
    option (google.api.http) = {
      put : "/api/grpc/update-wallet"
      body : "*";
    };
  }
}

